--- a/public_html/index.html
+++ b/public_html/index.html
@@ -102,7 +102,7 @@ and open the template in the editor.
         <style>
     .toggler { width: 500px; height: 200px; position: relative; }
     #button { padding: .5em 1em; text-decoration: Italic; }
-    #effect { width: 240px; height: 135px; padding: 0.4em; position: relative; background: blue; }
+    #effect { width: 240px; height: 135px; padding: 0.4em; position: relative; background: purple; }
     #effect h3 { margin: 0; padding: 0.4em; text-align: center; }
   </style>
  
